# wb_parser_bot

./: Dockerfile  README.md  example.env  main.py  pyproject.toml
wb_parser_bot/: config.py  loader.py
wb_parser_bot/handlers/: __init__.py  cancel.py  main.py  unknown.py  welcome.py
wb_parser_bot/handlers/product_analys/: __init__.py  main.py  position.py
wb_parser_bot/keyboards/: __init__.py
wb_parser_bot/services/: __init__.py  keywords_generator.py  parser.py
wb_parser_bot/states/: __init__.py  product_analys.py
